[package]
name = "transparentlog_core"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.58.1"
description = "Core API for Transparent Log, with in-memory and file implementations"
repository = "https://github.com/JPMoresmau/transparentlog"
categories = ["data-structures","cryptography::cryptocurrencies"]
keywords = ["distributed","log","merkle"]

[dependencies]
rust-crypto = "0.2.36"
num = "0.4.0"
maybe-owned = "0.3.4"
thiserror = "1.0.30"
anyhow = "1.0.53"
serde = {version="1.0.136", features = ["derive"] }
rmp = "^0.8"
rmp-serde = "1.0.0"

[dev-dependencies] 
serial_test = "0.5.1"