[package]
name = "transparentlog_rocksdb"
version = "0.1.0"
edition = "2021"

[dependencies]
transparentlog_core = { path = "../transparentlog_core" }
rocksdb = "0.18.0"
serde = {version="1.0.136", features = ["derive"] }
anyhow = "1.0.53"
maybe-owned = "0.3.4"
byteorder = "1.4.3"
rmp = "^0.8"
rmp-serde = "1.0.0"

[dev-dependencies] 
serial_test = "0.5.1"