[package]
name = "transparentlog_rocksdb"
version = "0.0.2"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.58.1"
description = "RocksDB implementation of Transparent Log"
repository = "https://github.com/JPMoresmau/transparentlog"
categories = ["data-structures","cryptography::cryptocurrencies","database"]
keywords = ["distributed","log","merkle"]


[dependencies]
transparentlog_core = { path = "../transparentlog_core", version="0.0.2" }
rocksdb = "0.18.0"
serde = {version="1.0.136", features = ["derive"] }
anyhow = "1.0.53"
thiserror = "1.0.30"
maybe-owned = "0.3.4"
byteorder = "1.4.3"
rmp = "^0.8"
rmp-serde = "1.0.0"

[dev-dependencies] 
serial_test = "0.5.1"